NLP: update MHA

--- a/notebooks/NLP.ipynb
+++ b/notebooks/NLP.ipynb
@@ -985,33 +985,50 @@
     "* captures long-range dependencies in a sequence more effectively than RNNs and LSTMs.\n",
     "* allows parallel computation, enabling faster training.\n",
     "\n",
+    "## 4. Multi-Head Attention (MHA)\n",
     "\n",
-    "## 4. Multihead attention\n",
-    "Multihead attention is an extension of self attention by performing self attention in parallel $h$ times, where $h$ is the number of heads. Each self attention head has its own Q, K, V mapping to capture different contextual relationships in the sequence to propose a update to improve the original word embedding based on the context. By processing information from multiple perspectives, multi-head attention allows the model to better understand dependencies between words.\n",
+    "Multi-Head Attention is an evolution of Self-Attention that allows the model to attend to information from different representation subspaces simultaneously. Instead of one \"large\" attention mechanism, the model runs $h$ self-attention heads in parallel.\n",
     "\n",
-    "After each multihead attention layer, we will have $h$ number of refined embedding matrix, denoted by $z_0, z_1, ..., z_h$, where $z_i$ is the output for the $i$th self attention head. These outputs are concatenated into a single matrix, given by\n",
+    "If we used a single attention head for the entire embedding dimension, the model would be forced to average all relationships into one attention map. By splitting into $h$ heads, we achieve:\n",
+    "* **Diverse Focus:** Different heads can focus on different aspects of language (e.g., Head 1 focuses on grammar, Head 2 on sentiment, Head 3 on long-range dependencies).\n",
+    "* **Independent Scores:** Because each head has its own Softmax operation, Head 1 can assign a high attention weight between \"Bank\" and \"River,\" while Head 2 can simultaneously assign a high weight between \"Bank\" and \"Closed.\"\n",
     "\n",
-    "$$Z = [z_0, z_1, ..., z_{h-1}]$$\n",
+    "To implement this efficiently, we project the input into lower-dimensional subspaces. Let:\n",
+    "* $T$ = Sequence length (number of tokens)\n",
+    "* $d_{model}$ = The original embedding dimension (e.g., 512)\n",
+    "* $h$ = Number of heads (e.g., 8)\n",
+    "* $d_k$ = The head dimension, where $d_k = d_{model} / h$ (e.g., 64)\n",
     "\n",
+    "#### Step 1: Linear Projection (The Split)\n",
+    "Instead of one projection of size $(d_{model}, d_{model})$, each head $i$ uses its own weight matrices to create \"shrunken\" versions of $Q, K,$ and $V$ with dimension of $d_{k}/h$.\n",
+    "* Weight Matrices of the $i$th head: $W_i^Q, W_i^K, W_i^V$)\n",
+    "    - Size: $(d_{model}, d_k)$\n",
+    "* Mapping of the $i$th head: $Q_i, K_i, V_i$\n",
+    "    - Size: $(T, d_k)$ instead of $(T, d_{model})$\n",
+    "> *Note: In practice, for efficiency, we do one large $(d_{model}, d_{model})$ multiplication and then slice the output into $h$ heads as if they are computed individually.*\n",
+    "\n",
+    "#### Step 2: Scaled Dot-Product Attention\n",
+    "Each head computes attention score independently. Because the Softmax is applied only within the $d_k$ subspace, the heads do not \"interfere\" with each other’s attention scores.\n",
+    "* Attention Score of the $i$th head: $\\text{Softmax}\\left(\\frac{Q_i K_i^T}{\\sqrt{d_k}}\\right)$ \n",
+    "    - Size: $(T, T)$\n",
+    "* $i$th head Output ($z_i$): $z_i = \\text{Softmax}\\left(\\frac{Q_i K_i^T}{\\sqrt{d_k}}\\right)V$\n",
+    "    - Size: $(T, d_k)$\n",
+    "\n",
+    "#### Step 3: Concatenation (The Reassembly)\n",
+    "We concatenate the $h$ outputs from each head back together side-by-side. \n",
+    "$$Z_{concat} = [z_0, z_1, \\dots, z_{h-1}]$$\n",
+    "* Size: $h \\times (T, d_k) \\rightarrow (T, d_{model})$\n",
+    "\n",
+    "#### Step 4: Final Linear Projection ($W^O$)\n",
+    "Even though the dimension is back to $d_{model}$, we apply a final learned matrix $W^O$ to \"mix\" the information captured by the different specialists.\n",
+    "* Weight Matrix: $W^O$\n",
+    "    - Size $(d_{model}, d_{model})$\n",
+    "* Final Output ($Z'$): $Z' = W^O Z_{concat}$\n",
+    "    - Size $(T, d_{model})$\n",
+    "    \n",
     "<img src=\"https://substackcdn.com/image/fetch/f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Ff406d55e-990a-4e3b-be82-d966eb74a3e7_1766x1154.png\" width=700>\n",
     "\n",
-    "Then, a linear transformation is applied to project this concatenated output, $Z$, back to the model’s embedding size $d_{model}$, where\n",
-    "\n",
-    "$$Z' = Concat(z_0, z_1, ..., z_{h-1}) W_o = Z W_o$$\n",
-    "\n",
-    "$W_o$: a learned linear mapping that maps Z to have the size dimension of the word embedding\n",
-    "\n",
-    "Finally, this proposed change will be added to the original embedding to obtain one refined embedding, $X'$, where\n",
-    "\n",
-    "$$X' = X + Z'$$\n",
-    "\n",
-    "Multihead attention is powerful because it\n",
-    "1. enables the model to capture multiple relationships within the sequence, improving its ability to focus on different parts of the data.\n",
-    "2. allows better representation of complex dependencies and context.\n",
-    "\n",
-    "In Transformer architectures, we use multiple layers of multi-head attention because the refined word embeddings may reveal new relationships that were not apparent in earlier layers. By iteratively applying multi-head attention, the model progressively enhances its understanding of contextual dependencies and word meanings to improve the overall performance\n",
-    "\n",
-    "After each attention layer, the updated word embeddings can be processed in parallel because all dependencies, contextual relationships, and relative positions between words have already been captured and encoded within them\n",
+    "Multi-head attention is powerful because it keeps the total computational cost similar to single-head attention while dramatically increasing the model's ability to represent complex dependencies. By reducing the latent dimension per head to $d_{model}/h$, we force each head to learn a compressed, specialized \"feature\" of the text, which is then re-integrated in the final linear layer.\n",
     "\n",
     "## 5. Cross attention\n",
     "Cross-Attention is a mechanism built upon self-attention and is commonly used in encoder-decoder architectures. Unlike self-attention, which applies attention in only one input sequence, cross-attention allows one sequence to attend to another sequence, capturing dependencies between them.\n",
@@ -1229,7 +1246,7 @@
     "During training, the target sequence embeddings (from the ground truth) are passed into the **decoder** using **teacher forcing**.  \n",
     "This means we input the full target sequence (shifted by one token) into the decoder, rather than using the model’s previous predictions.\n",
     "\n",
-    "The decoder uses a **masked (causal) self-attention layer**, where a triangular mask ensures that each token can only attend to itself and previous tokens — not future ones. This enforces autoregressive behavior.\n",
+    "The decoder uses a **masked (causal) self-attention layer**, where a triangular mask ensures that each token can only attend to itself and previous tokens — not future ones. This enforces autoregressive behavior because each token can only refine its embedding based on previous tokens, which is strictly causal. This is the same as inference because during inference, the next token does not exist at the current timestep.\n",
     "\n",
     "> **Example:**  \n",
     "> In the attention mask matrix below, each row shows which tokens a particular position can attend to:\n",
