RL: Added SARSA lambda

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -51,6 +51,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d16ce44e",
+   "metadata": {},
+   "source": [
+    "# Algorithm Summary\n",
+    "<img src=\"https://miro.medium.com/1*itmyDvkBatuB-1Zw6zWL6A.jpeg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d34d7ee",
    "metadata": {},
    "source": [
@@ -958,6 +967,50 @@
     "   - Continue until $q(s, a)$ converges.\n",
     "\n",
     "Note: MC methods update only after an episode finishes. If an agent becomes trapped in a state (or a loop), the episode may never end, preventing any learning from occurring. In contrast, online learning methods such as SARSA update their estimates during the episode at every timestep. This allows the agent to quickly recognize that a policy leading to such traps is poor and adjust its behavior before the episode is over.\n",
+    "\n",
+    "However, SARSA makes one update to one state-action pair per timestep, this means that the policy barely changes in each iteration because only one entry of the $q$ function changes, making it slow to convergence. To solve this problem, we can use TD($\\lambda$) with eligibility tracing instead of TD(0), which gives SARSA($\\lambda$).\n",
+    "\n",
+    "### SARSA($\\lambda$) Algorithm\n",
+    "1. Given:\n",
+    "    - Initial policy $\\pi$ (e.g., $\\epsilon$-greedy)\n",
+    "    - Learning rate $\\alpha \\in (0, 1]$\n",
+    "    - Discount factor $\\gamma \\in [0, 1]$\n",
+    "    - Trace decay rate $\\lambda \\in [0, 1]$\n",
+    "\n",
+    "2. Initialize:\n",
+    "    - $q(s, a)$ arbitrarily for all $s \\in \\mathcal{S}$, $a \\in \\mathcal{A}$\n",
+    "    - $E(s, a) = 0$ for all $s \\in \\mathcal{S}$, $a \\in \\mathcal{A}$\n",
+    "\n",
+    "3. Repeat (for each episode):\n",
+    "    - Initialize starting state $S$\n",
+    "    - Choose action $A \\sim \\pi(\\cdot \\mid S)$\n",
+    "    - Reset eligibility traces: $E(s, a) = 0$ for all $s, a$\n",
+    "\n",
+    "    - For each timestep (until $S$ is terminal):\n",
+    "        - Take action $A$, observe the reward $R$ and the next state $S'$\n",
+    "        - Choose the next action according to the current policy $A' \\sim \\pi(\\cdot \\mid S')$\n",
+    "     \n",
+    "        - Calculate TD Error:\n",
+    "            $$\\delta \\leftarrow R + \\gamma q(S', A') - q(S, A)$$\n",
+    "\n",
+    "        - Increment Eligibility Trace for current pair:\n",
+    "            $$E(S, A) \\leftarrow E(S, A) + 1$$\n",
+    "\n",
+    "        - Update ALL state-action pairs:\n",
+    "           For all $s \\in \\mathcal{S}, a \\in \\mathcal{A}$:\n",
+    "           $$q(s, a) \\leftarrow q(s, a) + \\alpha \\cdot \\delta \\cdot E(s, a)$$\n",
+    "           $$E(s, a) \\leftarrow \\gamma \\lambda E(s, a)$$\n",
+    "\n",
+    "         - Transition:\n",
+    "           $$S \\leftarrow S'$$\n",
+    "           $$A \\leftarrow A'$$\n",
+    "         - Update $\\pi$ (Implicitly updated via changes in $q$)\n",
+    "\n",
+    "4. Repeat until convergence.\n",
+    "\n",
+    "Note: since we need to track the eligibility of all state-action pairs, the dimension of $E$ is $(S, A)$\n",
+    "\n",
+    "For SARSA($\\lambda$), all previously visited states-action pairs will be updated in each iteration due to eligibility tracing. Therefore, it leads to faster convergence than SARSA.\n",
     "\n",
     "## Q-Learning\n",
     "Q-learning is an off-policy TD control algorithm that directly learns the optimal action-value function $q_*$, rather than the action-value function of the current policy $q_\\pi$. This differs from SARSA (on-policy), which learns $q_\\pi$ for the policy being followed. The Q-learning update rule is\n",
