Added SFT, Lora

--- a/notebooks/NLP.ipynb
+++ b/notebooks/NLP.ipynb
@@ -1352,6 +1352,73 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2f9f72d",
+   "metadata": {},
+   "source": [
+    "# Supervised Fine-Tuning (SFT)\n",
+    "During pre-training, a model learns the statistical structure of language by predicting the next token in a sequence. While this makes the model \"knowledgeable,\" its primary instinct is to simply complete a document. If you give a pre-trained model the prompt \"Write a poem about the sea,\" it might respond with \"and then write a poem about the mountains,\" because it thinks it only knows how to complete the sentence in a reasonable manner.\n",
+    "\n",
+    "Supervised Fine-Tuning (SFT) is the process of narrowing this broad capability into specific behaviors. It transforms a \"document completer\" into a task-specific model, like question-answering.\n",
+    "\n",
+    "SFT works by training the pre-trained model on a smaller, high-quality dataset of demonstrations. Each data point consists of an input (a prompt or instruction) and a ground-truth output (the desired response). To help the model distinguish between instructions and responses, the data is usually formatted using a specific chat template with special tokens:\n",
+    "\n",
+    "`<SOS> {Instruction/Task} <DELIMITE> {Correct Response} <EOS>`\n",
+    "\n",
+    "* `<SOS>` (Start of Sequence): Indicates the beginning of a new task.\n",
+    "* `<DELIMITER>`: A separator that marks the boundary where the instruction ends and the model should start generating.\n",
+    "* `<EOS>` (End of Sequence): Teaches the model exactly when the task is complete so it knows when to stop generating.\n",
+    "\n",
+    "During training, we feed the model the input part of the pair (`<SOS> Instruction <DELIMITER>`). The model generates a sequence, and we calculate the loss by comparing its output to the \"ground-truth\" answer provided in the dataset.  Using Backpropagation, the model's internal weights are updated to maximize the probability of producing that exact ground-truth response. Over thousands of examples, the model learns the structural pattern to provide the answers in the specific format given by the dataset.\n",
+    "\n",
+    "While Question-Answering is the most famous example, SFT is used to teach a wide variety of tasks, like summarization, code generation, safefy alignment, etc. \n",
+    "\n",
+    "Once the model is fine-tuned, it becomes an Instruction-Following model. At inference time, when it receives a prompt formatted with the same special tokens, it no longer tries to complete the text. It recognizes the pattern and naturally provides the response expected by the user.\n",
+    "\n",
+    "## Types of Fine-Tuning\n",
+    "Fine-tuning strategies are generally categorized by how many of the model's internal parameters are modified during the training process\n",
+    "\n",
+    "1. Full Fine-Tuning (FFT):\n",
+    "In this approach, backpropagation is allowed to update all parameters across every layer of the model. While this results in a model that is highly specialized for the new task, it is computationally expensive and requires significant memory.\n",
+    "\n",
+    "2. Selective Fine-Tuning:\n",
+    "In this approach, only a specific subset of parameters or layers is updated while the rest of the model remains frozen (untrainable).\n",
+    "\n",
+    "While effective, updating the model’s original parameters directly introduces two major challenges:\n",
+    "1. Prohibitive Cost: Modern LLMs contain billions of parameters. Performing full backpropagation requires lots of time and resources.\n",
+    "2. Catastrophic Forgetting: When a model is aggressively tuned on a narrow, specific dataset, it may \"overwrite\" the broad general knowledge it acquired during pre-training. This causes the model to lose its versatility and perform poorly on tasks outside the fine-tuning data.\n",
+    "\n",
+    "To solve these issues, researchers often use Parameter-Efficient Fine-Tuning (PEFT), such as LoRA.\n",
+    "\n",
+    "## Low Rank Adaptation (LoRA)\n",
+    "LoRA is a fine tuning method that does not modify the original paramters of the model directly. Rather, it addes two new low rank, trainable matrices $A$, $B$ to a desired layer, and the output from $A \\mul B$ is added to the output from the original weight matrix $W$. The new rank matrices are adaptors, and they modify the output slightly so that the model's output ... \n",
+    "\n",
+    "LoRA requires significantly less resources while achieving similar perfoamnce as normal SFT. Also, LoRA does not modify the base model but only the adaptors. Therefore, we can train adaptors for different tasks while preserving the same base model. At inference time, we can easily swithc adaptors according to different tasks.\n",
+    "\n",
+    "\n",
+    "## Low-Rank Adaptation (LoRA)\n",
+    "Low-Rank Adaptation (LoRA) is a Parameter-Efficient Fine-Tuning (PEFT) method that avoids the high cost of modifying a model's original parameters directly. Instead of updating the massive weight matrices of the pre-trained model, LoRA keeps the original weights frozen and introduces small, trainable adapter matrices.\n",
+    "\n",
+    "For a given pre-trained weight matrix $W$, LoRA represents the weight update as the product of two smaller, low-rank matrices, $A$ and $B$. If the original matrix $W$ has dimensions $d \\times k$, LoRA injects:\n",
+    "* Matrix $A$: Dimensions $d \\times r$\n",
+    "* Matrix $B$: Dimensions $r \\times k$\n",
+    "\n",
+    "Here, $r$ (the rank) is a very small number (e.g., 4, 8, or 16). During training, only $A$ and $B$ are updated via backpropagation. The final output of a layer is calculated as:\n",
+    "\n",
+    "$$Output = (xW) + (xAB)$$\n",
+    "\n",
+    "The product $(AB)$ acts as a delta (an adjustment) that shifts the model's behavior toward the specific fine-tuning task without altering the underlying knowledge stored in $W$.\n",
+    "\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1046/0*Dz3jnTjO6E7XP944.png\" width=500>\n",
+    "\n",
+    "### Key Advantages of LoRA\n",
+    "1. Drastic Resource Reduction: Because the rank $r$ is so small, the number of trainable parameters is reduced significantly to save required training time and resources.\n",
+    "2. Prevention of Catastrophic Forgetting: Since the base weights ($W$) remain frozen, the model’s original general knowledge is perfectly preserved. The adapters simply layer new task-specific behaviors on top.\n",
+    "3. Modular Portability: LoRA does not merge into the base model during training. This means we can train multiple sets of adapters for different tasks (e.g., one for coding, one for creative writing) and swap them in and out of the same base model at inference time.\n",
+    "4. Efficiency at Inference: At the time of deployment, the adapter weights $(AB)$ can be mathematically merged back into the original $W$. This ensures that there is zero additional latency during inference compared to a standard fine-tuned model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ba799d5d",
    "metadata": {},
    "source": [
