Added data generation problem

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1055,6 +1055,11 @@
     "4. Until convergence:\n",
     "   - Continue until $q(s, a)$ stabilizes or a predefined stopping condition is met.\n",
     "\n",
+    "5. Optimal Policy:\n",
+    "   - Extract the optimal deterministic policy by selecting actions greedily based on $q(s, a)$.\n",
+    "   \n",
+    "Note: in Q-learning, we generally select the behaviour policy to be the $\\epsilon$-greedy version of the greedy policy to ensure sufficient exploration. Therefore, the action-value function, $q(s, a)$, is shared between both policy, and we do not need two instances of the action-value functions.\n",
+    "\n",
     "## Expected SARSA  \n",
     "Expected SARSA is another TD control algorithm that improves upon the standard SARSA method by uinsg the expected value of the next state's action-value (weighted by the policy's action probabilities) to update the current estimation. The update rule for expected SARSA is\n",
     "\n",
