Fix Off-policy MC

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -734,30 +734,43 @@
     "\n",
     "$$\\text{If } \\pi(a \\mid s) > 0, \\text{ then } b(a \\mid s) > 0$$\n",
     "\n",
+    "However, a key issue is that the importance sampling ratio may have extremely high variance if $\\rho_{t:T-1}$ is large. This will cause an extremely large update to the estimation, which is undesirable. Therefore, we use a weighted version of importance sampling, where $v_\\pi(s) \\approx \\frac{\\sum_{i=1}^N \\rho^{(i)} G^{(i)}}{\\sum_{i=1}^N \\rho^{(i)}}$. This updates will cause more bias in the estimation since we do not update the value function with the actual return, but a weighted version of it to prevent the estimated value from explosion. In practice, we use $c(s, a)$ to track the sum of the ratios of each state-action pair.\n",
+    "\n",
     "### Algorithm Steps\n",
     "1. Initialize:\n",
-    "   - Initialize a target policy $\\pi$ (can be random).\n",
-    "   - Initialize the action-value function $q(s, a)$ arbitrarily.\n",
+    "   - $q(s, a) \\in \\mathbb{R}$ arbitrarily for all $s, a$\n",
+    "   - $c(s, a) = 0$ (Cumulative denominator weight) for all $s, a$\n",
+    "   - Target policy $\\pi(s)$ is the greedy policy with respect to $q$\n",
     "\n",
-    "2. Generate an Episode:\n",
-    "   - Follow the behaviour policy $b$ to generate an episode.\n",
-    "   - Record the sequence of transitions: $(s_0, a_0, r_1), (s_1, a_1, r_2), \\dots, (s_T, \\_)$\n",
+    "2. Loop (for each episode):\n",
+    "   - Generate Episode:\n",
+    "     Generate an episode using behavior policy $b$ (e.g., $\\epsilon$-soft):\n",
+    "     $S_0, A_0, R_1, \\dots, S_{T-1}, A_{T-1}, R_T$\n",
     "\n",
-    "3. Policy Evaluation (via Importance Sampling):\n",
-    "   - For each timestep $t$ in the episode, process in reverse from $T-1$ to $t$:\n",
-    "     - Compute the return $G_t$ from time $t$ onward: $G_t = r_{t+1} + \\gamma r_{t+2} + \\gamma^2 r_{t+3} + \\dots$\n",
-    "     - Compute the cumulative importance sampling ratio: $\\rho_{t:T-1} = \\prod_{k=t}^{T-1} \\frac{\\pi(a_k \\mid s_k)}{b(a_k \\mid s_k)}$\n",
-    "     - Estimate the reweighted return: $v_\\pi(s_t) \\approx \\rho_{t:T-1} \\cdot G_t$\n",
-    "     - Use this to update the estimate of $q(s_t, a_t)$\n",
-    "     - Average over multiple episodes (if applicable): $v_\\pi(s) \\approx \\frac{1}{N} \\sum_{i=1}^N \\rho^{(i)} G^{(i)}$\n",
+    "   - Initialize Weight:\n",
+    "     $w \\leftarrow 1.0$\n",
+    "     $G \\leftarrow 0$\n",
     "\n",
-    "4. Policy Improvement:\n",
-    "   - For every state $s$ visited in the episode:\n",
-    "     - Improve the policy using a greedy or $\\varepsilon$-greedy update:\n",
-    "       $$\\pi(s) = \\arg\\max_a q(s, a) \\quad \\text{or} \\quad \\varepsilon\\text{-greedy}(q(s, a))$$\n",
+    "   - Loop backward (from $t = T-1$ down to $0$):\n",
+    "     1. Update Return:\n",
+    "     $G \\leftarrow \\gamma G + R_{t+1}$\n",
     "\n",
-    "5. Repeat:  \n",
-    "   - Go back to Step 2 and repeat the process until the policy converges or is \"good enough.\""
+    "     2. Update Cumulative Weight:\n",
+    "        $c(S_t, A_t) \\leftarrow c(S_t, A_t) + w$\n",
+    "\n",
+    "     3. Update Q-Value (Incremental Weighted Average):\n",
+    "        $$q(S_t, A_t) \\leftarrow q(S_t, A_t) + \\frac{w}{c(S_t, A_t)} \\big(G - q(S_t, A_t) \\big)$$\n",
+    "\n",
+    "     4. Policy Improvement (Implicit):\n",
+    "        $\\pi(S_t) \\leftarrow \\arg\\max_a q(S_t, a)$\n",
+    "\n",
+    "     5. Exit Condition:\n",
+    "        If $A_t \\neq \\pi(S_t)$:\n",
+    "            Break loop (Weight becomes 0, so no past steps learn from this because this action will never happens in the greedy case). This causes lots of waste in data.\n",
+    "\n",
+    "     6. Update Importance Sampling Weight:\n",
+    "        $$w \\leftarrow w \\cdot \\frac{\\pi(A_t|S_t)}{b(A_t|S_t)}$$\n",
+    "        *(Note: Since $\\pi$ is deterministic, $\\pi(A_t|S_t)$ is either 1 or 0. If we didn't break in Step 5, it is 1).*"
    ]
   },
   {
