Fix Off-policy MC

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -730,11 +730,11 @@
     "So if we have multiple trajectories, we compute the adjusted return for each using $\\rho^{(i)} G^{(i)}$, and then average them to estimate the expected return under the target policy.\n",
     "\n",
     "## Off-Policy Monte Carlo Method\n",
-    "Off-policy Monte Carlo learning enables us to evaluate and improve a target policy $\\pi$ using episodes generated from a different behaviour policy $b$. Both policies can be either deterministic or stochastic. The only essential requirement is the coverage condition as discussed before, where\n",
+    "Off-policy Monte Carlo learning enables us to evaluate and improve a target policy $\\pi$ using episodes generated from a different behaviour policy $b$. The target policy can be either deterministic or stochastic, but the behavior policy must be stochastic. The only essential requirement is the coverage condition as discussed before, where\n",
     "\n",
     "$$\\text{If } \\pi(a \\mid s) > 0, \\text{ then } b(a \\mid s) > 0$$\n",
     "\n",
-    "However, a key issue is that the importance sampling ratio may have extremely high variance if $\\rho_{t:T-1}$ is large. This will cause an extremely large update to the estimation, which is undesirable. Therefore, we use a weighted version of importance sampling, where $v_\\pi(s) \\approx \\frac{\\sum_{i=1}^N \\rho^{(i)} G^{(i)}}{\\sum_{i=1}^N \\rho^{(i)}}$. This updates will cause more bias in the estimation since we do not update the value function with the actual return, but a weighted version of it to prevent the estimated value from explosion. In practice, we use $c(s, a)$ to track the sum of the ratios of each state-action pair.\n",
+    "However, a key issue is that the importance sampling ratio may have extremely high variance if $\\rho_{t:T-1}$ is large. This will cause an extremely large update to the estimation, which is undesirable. Therefore, we use a weighted version of importance sampling, where $v_\\pi(s) \\approx \\frac{\\sum_{i=1}^N \\rho^{(i)} G^{(i)}}{\\sum_{i=1}^N \\rho^{(i)}}$. This updates will cause more bias in the estimation because we normalize by the sum of weights to reduce variance and prevent the estimated value from explosion. In practice, we use $c(s, a)$ to track the sum of the ratios of each state-action pair.\n",
     "\n",
     "### Algorithm Steps\n",
     "1. Initialize:\n",
