--- a/notebooks/Data Generation.ipynb
+++ b/notebooks/Data Generation.ipynb
@@ -34,6 +34,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34e4d2e8",
+   "metadata": {},
+   "source": [
+    "# Discriminative and Generative Models\n",
+    "### Discriminative Models\n",
+    "For supervised learning tasks with data $(x, y)$, a discriminative model learns to directly estimate the conditional probability $P(y|x)$. This approach learns a decision boundary between different data points, which is effectively a direct mapping from an input to an output. Because they focus solely on the boundary, discriminative models do not explicitly model the underlying distribution of the input data, meaning they simply learn how to separate classes to minimize the loss but do not understand what the data actually looks like.\n",
+    "\n",
+    "### Generative Models\n",
+    "A generative model aims to learn the complete data distribution. For a dataset without labels, it learns the distribution $P(x)$, and for a labelled dataset, it learns the joint distribution $P(x, y)$. This is often understood through the factorization $P(x|y)P(y)$, meaning the model learns \"what the data looks like\" (the likelihood $P(x|y)$) given a specific label.\n",
+    "\n",
+    "This understanding allows generative models to perform both types of tasks:\n",
+    "* Generative Task: For a desired label $y$, the model can generate new synthetic features $x$ by sampling from $P(x|y)$.\n",
+    "* Discriminative Task: To classify a new input $x$, the model uses Bayes' Rule to calculate the posterior probability $P(y|x) \\propto P(x|y)P(y)$, allowing it to determine the most likely label.\n",
+    "\n",
+    "<img src=\"https://cdn.prod.website-files.com/65d8ee5f025f02594c614c17/66d088d78f87048868f94fee_66d085ede64cc943387d4695_1.webp\" width=500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd979150",
+   "metadata": {},
+   "source": [
+    "# Bayes' Theorem in Machine Learning\n",
+    "Given labelled data $(x, y)$:\n",
+    "\n",
+    "$$P(y|x) = \\frac{P(x|y)P(y)}{P(x)} = \\frac{P(x|y)P(y)}{\\sum_{k} P(x|y_k)P(y_k)}$$\n",
+    "\n",
+    "* **$P(x|y)$ (Likelihood):** The probability of observing feature $x$ given that it belongs to class $y$. This is what the generative model explicitly learns (the distribution of the data for each class). This model can be learned either statistically or through a neural network.\n",
+    "* **$P(y)$ (Prior):** The probability of a class $y$ occurring before seeing any specific data. This represents our prior belief or assumption. It is often easy to compute by calculating the frequency of each class in the dataset.\n",
+    "* **$P(x)$ (Evidence / Marginal):** The total probability of observing feature $x$ regardless of the class. \n",
+    "    * Calculated as $\\sum_{k} P(x|y_k)P(y_k)$ (summing the weighted likelihoods over all possible classes). \n",
+    "    * In classification, this acts as a normalization constant to ensure the posterior probabilities sum to 1.\n",
+    "    * *Note:* While easy to compute in simple classification tasks with few classes, calculating $P(x)$ becomes computationally intractable in complex generative models with high-dimensional or continuous latent variables. Therefore, in classification tasks, we can simply ignore it and find the prediction by\n",
+    "    $$ \\text{Prediction} = \\arg\\max_y \\big( P(x|y)P(y) \\big)$$\n",
+    "    In generative tasks, we will have to approximate it.\n",
+    "* **$P(y|x)$ (Posterior):** The probability that the data belongs to class $y$ given the observed feature $x$. This is the final prediction we want to make.\n",
+    "\n",
+    "In discriminative approach, the model learns $P(y|x)$ directly (the mapping from input to class) without modeling the underlying data distribution. In generative approach, the model learns the likelihood $P(x|y)$ (the data distribution per class) and the prior $P(y)$, then combines them using Bayes' rule to compute the posterior $P(y|x)$ for classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b3ec25dd",
    "metadata": {},
    "source": [
@@ -42,12 +84,7 @@
     "\n",
     "The naive bayes algorithm works by calculating the conditional probability of each class given the input features as conditions. The class with the highest probability is then predicted as the output\n",
     "\n",
-    "# Bayes' theorem\n",
-    "$$P(A|B) = \\frac{P(B|A)P(A)}{P(B)} = \\frac{\\text{True positives}}{\\text{True positives + False positives}}$$\n",
     "\n",
-    "Interpretations: the probability of event B to occur given the occurrence of event A\n",
-    "\n",
-    "Assumptions: the bayes' theorem assumes that the input features are conditionally independent from each other\n",
     "\n",
     "# ML version\n",
     "$$P(y_k|X) = \\frac{P(X|y_k)P(y)}{P(X)} = \\frac{P(x_1|y-k)\\cdot P(x_2|y_k)\\cdots \\dot P(x_n|y_k)\\cdot P(y_k)}{P(X)} = \\frac{P(y_k)\\cdot \\Pi^{n}_{i=1}P(x_i|y_k)}{P(X)}$$\n",
