added navie bayes

--- a/notebooks/Data Generation.ipynb
+++ b/notebooks/Data Generation.ipynb
@@ -80,29 +80,68 @@
    "metadata": {},
    "source": [
     "# Naive bayes\n",
-    "Naive bayes is an algorithm that can be used for classification tasks based on the Bayes' theorem. It is used on a variety of datasets, including text data, image data, and numerical data\n",
+    "In normal Bayes rule, the joint distribution represents all features occurring together given the class, but the hidden depdencies between features are usually difficult to compute. Therefore, we use Naive bayes to simplify the model by assuming all features are conditionally independent, meaning knowing one feature will not give any inofrmation about any other features. This is formalized by\n",
     "\n",
-    "The naive bayes algorithm works by calculating the conditional probability of each class given the input features as conditions. The class with the highest probability is then predicted as the output\n",
+    "$$P(x|y) = P(x_1, x_2, \\dots, x_n | y) = \\Pi_{i=1}^{n}P(x_i | y)$$\n",
     "\n",
+    "This is a huge assumption as the features are pretty much nenver independent in reality.\n",
     "\n",
+    "Ususally, naive bayes can be used as a statistical method so that it learns the distribution of data through counting. This is fast but rather unreliable way of learning.\n",
     "\n",
-    "# ML version\n",
-    "$$P(y_k|X) = \\frac{P(X|y_k)P(y)}{P(X)} = \\frac{P(x_1|y-k)\\cdot P(x_2|y_k)\\cdots \\dot P(x_n|y_k)\\cdot P(y_k)}{P(X)} = \\frac{P(y_k)\\cdot \\Pi^{n}_{i=1}P(x_i|y_k)}{P(X)}$$\n",
-    "\n",
-    "where\n",
-    "\n",
-    "$$P(y_k) = \\frac{\\sum^{m}_{i=1}(y_i=y_k)}{m}$$\n",
-    "\n",
-    "$$P(x_i = a_j|y_k) = \\frac{\\sum^{m}_{i=1}(x_i=a_j \\text{&} y_i=y_k)}{\\sum^{m}_{i=1}(y_i=y_k)}$$\n",
+    "### Example\n",
+    "For a binary classification problem with the dataset $({x_1, x_2}, y)$, we want to make classification given a new sample, which is $P(y| x_1=a, x_2=b)$\n",
+    "...\n",
     "\n",
     "\n",
-    "$P(y_k|X)$: the probability of the $k$th class, $y_k$, given the input features, $X$, which contains $n$ features ($x_1, x_2, \\cdots, x_n$)\n",
+    "# Naive Bayes\n",
     "\n",
-    "$P(y_k)$: the probability of the $k$th class (Prior probability), which equals the frequency of the $k$th class appears in all training examples, $m$\n",
+    "In the standard application of Bayes' rule, the likelihood term $P(x_1, x_2, \\dots, x_n | y)$ represents the joint probability of all features occurring together given the class. Computing this is difficult because features often have complex correlations (dependencies), requiring a massive amount of data to model accurately.\n",
     "\n",
-    "$P(x_i|y_k)$: the probaility of feature, $x_i$ given $y_k$ as the condition (conditioinal proability), which equals the number of cases when $x_i$ equals to $a_j$ and $y_i$ equals to $y_k$ divided by the number of cases when $y_i$ equals to $y_k$\n",
+    "Therefore, Naive Bayes simplifies the model by introducing the assumption of conditional independence. This assumes that, *given the class label*, knowing the value of one feature provides no information about the value of any other feature.\n",
     "\n",
-    "To make predictions, we select the class with the highest probability, $P(y_k|X)$\n"
+    "This assumption allows us to decompose the complex joint likelihood into a simple product of individual probabilities:\n",
+    "\n",
+    "$$P(x|y) = P(x_1, x_2, \\dots, x_n | y) \\approx \\prod_{i=1}^{n}P(x_i | y)$$\n",
+    "\n",
+    "Consequently, the posterior probability for a class $y$ is proportional to:\n",
+    "\n",
+    "$$P(y|x) \\propto P(y) \\cdot \\prod_{i=1}^{n}P(x_i | y)$$\n",
+    "\n",
+    "Note on Reality: This is a strong, naive assumption because real-world features are rarely independent. However, despite this theoretical flaw, Naive Bayes is computationally efficient and often performs surprisingly well as a baseline classifier. While its probability estimates might be inaccurate due to the assumption, its classification decisions are often correct.\n",
+    "\n",
+    "### Example\n",
+    "**Scenario:**\n",
+    "We have a binary classification problem where the class $y$ can be either **Spam (1)** or **Not Spam (0)**. Our data has two features, $x_1$ and $x_2$.\n",
+    "\n",
+    "We want to classify a new sample where $x_1=a$ and $x_2=b$. To do this, we calculate the posterior probability for both classes and pick the highest one.\n",
+    "\n",
+    "**Step 1: Setup the equation for Class 1 (Spam)**\n",
+    "Using the Naive Bayes assumption, we expand the formula:\n",
+    "$$P(y=1 | x_1=a, x_2=b) \\propto P(y=1) \\cdot P(x_1=a | y=1) \\cdot P(x_2=b | y=1)$$\n",
+    "\n",
+    "**Step 2: \"Learning\" by Counting**\n",
+    "We estimate these values directly from our training data frequencies:\n",
+    "* $P(y=1)$: How frequent is Spam overall? (Prior)\n",
+    "* $P(x_1=a | y=1)$: In Spam messages, how often does feature $x_1$ equal $a$? (Likelihood 1)\n",
+    "* $P(x_2=b | y=1)$: In Spam messages, how often does feature $x_2$ equal $b$? (Likelihood 2)\n",
+    "\n",
+    "**Step 3: Comparison**\n",
+    "We repeat the calculation for **Class 0 (Not Spam)**:\n",
+    "$$P(y=0 | x_1=a, x_2=b) \\propto P(y=0) \\cdot P(x_1=a | y=0) \\cdot P(x_2=b | y=0)$$\n",
+    "\n",
+    "**Step 4: Decision**\n",
+    "We compare the two resulting scores.\n",
+    "* If Score(Spam) > Score(Not Spam), we classify the sample as Spam.\n",
+    "\n",
+    "\n",
+    "The key distinction lies in how we treat the features $x_1$ and $x_2$. Without the Naive assumption, we must treat the features as a coupled pair $(x_1, x_2)$. To calculate the likelihood $P(x_1=a, x_2=b | y)$, we would need to count how often the exact combination **\"a AND b\"** appears together in the training data. However, if the specific pair $(a, b)$ never appeared in the training set (sparsity), the probability becomes 0, and the model fails to make a prediction.\n",
+    "\n",
+    "Naive Bayes assumes $x_1$ and $x_2$ are independent given the class. We treat them separately\n",
+    "1.  Calculate $P(x_1=a | y)$ by looking only at the $x_1$ column.\n",
+    "2.  Calculate $P(x_2=b | y)$ by looking only at the $x_2$ column.\n",
+    "3.  Multiply the results.\n",
+    "\n",
+    "This allows the model to predict the probability of a combination $(a, b)$ even if it has never physically seen those two features appear together in history."
    ]
   },
   {
